Mac installer, re-write copyDirectory using ProcessBuilder; remove apache commons-io-2.0.1 dependency GP-5992